# CPE487_587_Final_Project_Python_Code-

./: .gitignore  Cargo.toml  Model_Description.md  README.md  pyproject.toml
results/: clustering_metrics.csv  regression_metrics.csv
results/baseline/: baseline_metrics.csv
scripts/: main.py  main.sh
src/: lib.rs
src/cpe487587finalproject/: __init__.py
src/cpe487587finalproject/dataprocess/: data.py
src/cpe487587finalproject/matric/: __init__.py  matric.py
src/cpe487587finalproject/model/: model.py
