[project]
name = "cpe487587finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "polars>=1.40.0",
    "qutip>=5.2.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]

[tool.maturin]
module-name = "cpe487587finalproject._core"
python-packages = ["cpe487587finalproject"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
